--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,1 @@
-# Core ML/AI libraries
-numpy>=1.24.0
-
-# PyTorch (CPU-only for stability in WSL2/Docker environments)
-# For GPU support, replace with: torch>=2.0.0 torchvision>=0.15.0 torchaudio>=2.0.0
-torch>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
-torchvision>=0.15.0 --index-url https://download.pytorch.org/whl/cpu
-torchaudio>=2.0.0 --index-url https://download.pytorch.org/whl/cpu
-
-# RL and environment libraries
-stable-baselines3>=2.0.0
-gymnasium[classic-control]>=0.29.0
-
-# Gym compatibility (for older pre-trained models)
-gym>=0.21.0
-shimmy[gym-v21]>=1.3.0
-
-# Atari environments (required for Breakout focus)
-ale-py>=0.8.0
-shimmy>=1.3.0
-
-# Video processing and visualization (headless versions for stability)
-opencv-python-headless>=4.8.0
-pillow>=9.5.0
-matplotlib>=3.7.0
-imageio>=2.31.0
-
-# Utilities
-requests>=2.31.0
-tqdm>=4.65.0
-pyyaml>=6.0
-
-# Google Generative AI (Gemini)
-google-generativeai>=0.3.0
-
-# NLP and evaluation libraries
-transformers>=4.30.0
-sentence-transformers>=2.2.0
-bert-score>=0.3.13
-nltk>=3.8.0
-scikit-learn>=1.3.0
-
-# Additional utilities for video analysis
-python-dotenv>=1.0.0
-asyncio-throttle>=1.0.2
-
-# Development tools (optional)
-jupyter>=1.0.0 
+google-genai>=0.3.0 
