Update .gitignore to include demo_video.mp4, refine HVA-X documentation by removing outdated sections, and enhance run_hva_pipeline.py with improved function naming for clarity. Adjust prompts in gemini_client.py for better specificity in analysis tasks and update argument defaults in the pipeline script.

--- a/.gitignore
+++ b/.gitignore
@@ -411,3 +411,4 @@ hva_videos/episode_017/episode_017.mp4
 hva_videos/episode_018/episode_018.mp4
 hva_videos/episode_019/episode_019.mp4
 hva_videos/episode_020/episode_020.mp4
+demo_video.mp4
