Refactor Netlify deployment setup and enhance GradCAM video recording
- Updated index.html title and styling for the AI Analysis Comparison Study.
- Implemented randomized study assignment with loading indication in JavaScript.
- Enhanced GradCAM video recording script with FFmpeg support for H.264 encoding.
- Added memory management and error handling in GradCAM video recording.
- Created comprehensive deployment instructions for Netlify, including form setup and security configurations.
- Configured netlify.toml for build settings and security headers.
- Developed visualize_json_results.py for plotting evaluation results from JSON files.
- Added placeholder files for future scripts (record_gradcam_optimized.py, test_memory_fix.sh).

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,6 @@ hva_videos/episode_018/episode_018.mp4
 hva_videos/episode_019/episode_019.mp4
 hva_videos/episode_020/episode_020.mp4
 demo_video.mp4
+gradcam_videos/gradcam_video.mp4
+.gitignore
+gradcam_videos2/gradcam_BreakoutNoFrameskip-v4_dqn.mp4
