--- a/requirements.txt
+++ b/requirements.txt
@@ -73,6 +73,7 @@ huggingface-hub==0.33.0
 huggingface-sb3==3.0
 idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
 imageio==2.37.0
+imageio-ffmpeg==0.6.0
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
@@ -109,6 +110,7 @@ mbstrdecoder==1.1.4
 mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1728387286143/work
 menuinst @ file:///croot/menuinst_1738943416351/work
 mistune==3.1.3
+moviepy==2.2.1
 mpmath==1.3.0
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -145,6 +147,7 @@ pexpect==4.9.0
 pillow==11.2.1
 platformdirs @ file:///croot/platformdirs_1744273042065/work
 pluggy @ file:///croot/pluggy_1733169602837/work
+proglog==0.1.12
 prometheus_client==0.22.1
 prompt_toolkit==3.0.51
 proto-plus==1.26.1
@@ -165,6 +168,7 @@ pyparsing==3.2.3
 PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
 pytablewriter==1.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
