Update .gitignore and enhance README with video analysis features
- Added multiple checkpoint analysis report files to .gitignore to prevent tracking of generated reports.
- Deleted outdated enhancement summary and analysis report files to streamline documentation.
- Enhanced README with detailed instructions for phase-by-phase execution of the analysis pipeline, emphasizing the new video-referenced analysis reports.
- Updated requirements.txt to include additional dependencies for improved functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,19 @@ demo_video.mp4
 gradcam_videos/gradcam_video.mp4
 .gitignore
 gradcam_videos2/gradcam_BreakoutNoFrameskip-v4_dqn.mp4
+checkpoint_analysis_bp/_steps_03199872/phase3_steps_03199872_report_20250724_123028.md
+checkpoint_analysis_bp/_steps_06199752/phase3_steps_06199752_report_20250724_124059.md
+checkpoint_analysis_bp/_steps_15199392/phase3_steps_15199392_report_20250724_130214.md
+checkpoint_analysis_bp/_steps_20999592/phase3_steps_20999592_report_20250724_131754.md
+checkpoint_analysis_bp/_steps_27599696/phase3_steps_27599696_report_20250724_134055.md
+checkpoint_analysis_results/steps_00199992/phase3_steps_00199992_report_20250724_122513.md
+checkpoint_analysis_results/steps_05199792/phase3_steps_05199792_report_20250724_123540.md
+checkpoint_analysis_results/steps_09199632/phase3_steps_09199632_report_20250724_124619.md
+checkpoint_analysis_results/steps_10199592/phase3_steps_10199592_report_20250724_125159.md
+checkpoint_analysis_results/steps_12199512/phase3_steps_12199512_report_20250724_125645.md
+checkpoint_analysis_results/steps_17999712/phase3_steps_17999712_report_20250724_130718.md
+checkpoint_analysis_results/steps_19999632/phase3_steps_19999632_report_20250724_131236.md
+checkpoint_analysis_results/steps_23999472/phase3_steps_23999472_report_20250724_132325.md
+checkpoint_analysis_results/steps_24999432/phase3_steps_24999432_report_20250724_132924.md
+checkpoint_analysis_results/steps_26999352/phase3_steps_26999352_report_20250724_133526.md
+similarity_analysis_results/similarity_analysis_report.md
